--- a/WebApplication1/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Register.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Register";
 }
 
+
 <h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -20,7 +21,8 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Hometown, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Hometown, new { @class = "form-control" })
+            @Html.EditorFor(m => m.Hometown, new {  htmlAttributes = new {@class = "form-control" } })
+            @Html.ValidationMessageFor(m => m.Hometown, "", new { })
         </div>
     </div>    
     <div class="form-group">
@@ -44,4 +46,13 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk"></script>
+    <script type="text/javascript">
+
+        google.maps.event.addDomListener(window, 'load', function () {
+            var input = document.getElementById('Hometown');
+            var places = new google.maps.places.Autocomplete(input);
+        });
+    </script>
+
 }
