--- a/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
@@ -13,10 +13,17 @@
 </head>
 <body>
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryval") 
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk"></script>
+    <script type="text/javascript">
+
+        google.maps.event.addDomListener(window, 'load', function () {
+            var input = document.getElementById('EventLocation');
+            var places = new google.maps.places.Autocomplete(input);
+        });
+    </script>
     
-    
-@using (Html.BeginForm("CreateAndUpload", "Event", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("FileUpload", "Event", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
         @Html.AntiForgeryToken()
         
@@ -65,13 +72,7 @@
             </div>
     
             
-                @using (Html.BeginForm("CreateAndUpload", "Event", FormMethod.Post, new SortedDictionary<string, object>() { { "callback", Model.EventPicture } } ))
-                {
-                    <div class="form-group">
-                        <input id="fileupload" type="file" name="files" multiple accept="image/gif, image/jpeg, image/png">
-                        <input type="submit" value="Upload">
-                    </div>
-                }
+            
                     
 
             <div class="form-group">
