--- a/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
@@ -36,7 +36,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.ev.EventLocation, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        <div class="col-md-10" id="Location">
             @Html.EditorFor(m => m.ev.EventLocation, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(m => m.ev.EventLocation, "", new { })
         </div>
@@ -64,7 +64,7 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk&libraries=places"></script>
     <script type="text/javascript">
         google.maps.event.addDomListener(window, 'load', function () {
-            var input = document.getElementById('EventLocation');
+            var input = document.getElementById('Location');
             var places = new google.maps.places.Autocomplete(input);
         });
     </script>
