--- a/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
@@ -36,7 +36,7 @@
                                     <a href="#">@Html.DisplayFor(ModelItem => item.EventName)</a>
                                 </h4>
                                 <p>@Html.DisplayFor(ModelItem => item.EventDescription)</p>
-                                <time>@Html.DisplayFor(ModelItem => item.EventDate)</time>
+                                <time>@Html.DisplayFor(ModelItem => item.EventBeginDate)</time>
                             </div>
                             <div class="interactio">
                                 <p class="pull-right">Participants: @Html.DisplayFor(ModelItem => item.EventId)</p>
